// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ribbon matches snapshot with empty ribbonCopy prop 1`] = `
<Fragment>
  <styled.div />
</Fragment>
`;

exports[`Ribbon matches snapshot with ribbonCopy prop 1`] = `
<Fragment>
  <styled.div>
    Prop Text
  </styled.div>
</Fragment>
`;
